fix(Applications/DFormElementEdit):Reduced gap between checkboxes

--- a/src/features/Applications/Components/DFormElementEdit/styles.scss
+++ b/src/features/Applications/Components/DFormElementEdit/styles.scss
@@ -30,3 +30,9 @@
     color: #474747;
   }
 }
+
+.field-default-edit {
+  .ant-form-item {
+    margin-bottom: 0px;
+  }
+}
